<resources>
    <string name="app_name">Niro</string>
    <string name="label_niro">Niro</string>
    <string name="txt_app_subtitle">Bharat Ek Krishi Pradhan Desh Hai</string>
    <string name="txt_header_enter_phone">Enter Mobile Number</string>
    <string name="txt_send_otp">Send OTP</string>
    <string name="txt_agree_terms_conditions"><![CDATA[I agree to Niro\'s Terms & Conditions]]></string>
    <string name="txt_enter_otp">Enter 6 digit OTP</string>
    <string name="txt_verify_number">Verify Number</string>
    <string name="txt_otp_not_received">OTP Not Received?</string>
    <string name="txt_resend_otp">Resend Otp</string>
    <string name="txt_header_name">What\'s Your Name?</string>
    <string name="txt_enter_name_hint">Enter Full Name</string>
    <string name="txt_btn_next">Next</string>
    <string name="txt_header_enter_business">Name Of Your Business</string>
    <string name="txt_enter_business">Enter Business Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtUserTypeFarmer">Farmer</string>
    <string name="txtUserTypeCommissionAgent">Commission Agent</string>
    <string name="txtUserTypeLoader">Loader</string>
    <string name="txt_btn_done">Done</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Nav Title</string>
    <string name="nav_header_subtitle">Nav subtitle</string>
    <string name="txt_share">Share</string>
    <string name="txt_home_welcome_message">Namaste, %s Ji</string>
    <string name="txt_total_transactions">Rs. %s Transactions</string>
    <string name="txt_total_orders">%d \nOrders</string>
    <string name="total_orders">%d Orders</string>
    <string name="total_payments">%d Payments</string>
    <string name="txt_btn_live_mandi_rates">Live Mandi Rates</string>
    <string name="txt_btn_join_facebook">Join our Facebook group</string>
    <string name="txt_btn_contact_whatsapp">Contact Us on Whatsapp</string>
    <string name="otp_sent">OTP has been sent!!</string>
    <string name="otp_sent_failed">Failed to send Otp. Try Again!!</string>
    <string name="invalid_otp">Entered Otp is Invalid</string>
    <string name="logging_in">Login In....</string>
    <string name="business_name_missing">BusinessName is Invalid. It should be of more than 2 characters!!</string>
    <string name="select_atleast_one_commodity">Please Select atleast one Commodity to proced</string>
    <string name="txt_fetching_commodities">Fetching All Commodities!!</string>
    <string name="select_your_mandi">Select Your Mandi</string>
    <string name="fetching_mandi_list">Fetching the Mandis</string>
    <string name="signing_up">Signing Up...</string>
    <string name="title_home">Home</string>
    <string name="title_orders">Orders</string>
    <string name="title_payments">Payments</string>
    <string name="title_users">Loaders</string>
    <string name="title_loans">Loans</string>
    <string name="title_profile">Profile</string>
    <string name="menu_support">Support</string>
    <string name="menu_about">About Us</string>
    <string name="menu_logout">Logout</string>
    <string name="txt_my_profile">My Profile</string>
    <string name="something_went_wrong">Something Went Wrong. Please try again!</string>
    <string name="fetching_order_summary">Fetching Order Summary...</string>
    <string name="whatsapp_not_installed">Whatsapp is not installed</string>
    <string name="title_buyers">Buyers</string>
    <string name="login_failed">Login Failed. Please Try Again!</string>
    <string name="signup_failed">Unable to Sign you Up. Please try again!</string>
    <string name="txt_from_contacts">From Contacts</string>
    <string name="text_enter_manually">Enter Manually</string>
    <string name="text_contact_details">Contact Details</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_number">Phone Number</string>
    <string name="hint_location">Mandi Location</string>
    <string name="hint_commodity">Select Commodity</string>
    <string name="hint_business_name">Business Name</string>
    <string name="add_contact">Add Contact</string>
    <string name="text_order_details">Order Details</string>
    <string name="hint_total_amount">Enter Total Amount</string>
    <string name="hint_receiving_date">Enter Receiving Date</string>
    <string name="hint_add_image">Add Image</string>
    <string name="text_payment_details">Payment Details</string>
    <string name="hint_transaction_amount">Enter Amount</string>
    <string name="hint_payment_date">Select Payment Date</string>
    <string name="txt_payment_mode">"Payment mode: "</string>
    <string name="btn_txt_cash">Cash</string>
    <string name="btn_text_bank">Bank</string>
    <string name="text_loan_details">Loan Details</string>
    <string name="hint_required_capital">Required Capital</string>
    <string name="hint_time_required">Time Required in Months</string>
    <string name="txt_btn_submit">Submit</string>
    <string name="txt_contact_soon">We will contact you within 12 hours</string>
    <string name="txt_total_users">Total: %d %s</string>
    <string name="txt_loader">Loaders</string>
    <string name="txt_buyers">Buyers</string>
    <string name="hint_search">Search</string>
    <string name="txt_filters">Filters</string>
    <string name="filter_location">Location</string>
    <string name="filter_commodity">Commodity</string>
    <string name="filter_ratings">Ratings</string>
    <string name="add_loader">Add Loader</string>
    <string name="add_buyer">Add Buyer</string>
    <string name="call_now">Call Now</string>
    <string name="add_order">Add an order</string>
    <string name="add_payment">New Payment</string>
    <string name="payment_status">Paid %s</string>
    <string name="text_detail_name">Name</string>
    <string name="text_detail_number">Phone</string>
    <string name="text_detail_mandi_address">Address</string>
    <string name="text_detail_commodities">Commodities</string>
    <string name="text_detail_business_name">"Business</string>
    <string name="txt_my_commodities">My Commodities:</string>
    <string name="title_select_from_contacts">Select From Contacts</string>
    <string name="fetch_contacts">Getting Your Contacts</string>
    <string name="title_enter_details">Enter Details</string>
    <string name="user_name_empty_error">Name can\'t be empty</string>
    <string name="name_too_short">Name is too short</string>
    <string name="phone_number_empty_error">Phone Number can\'t be Empty</string>
    <string name="invalid_phone_length">Invalid Phone Length. It should be of 10 digits</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="mandi_location_empty_error">Please select the mandi location</string>
    <string name="commodity_empty_error">Please select the commodity</string>
    <string name="checking_user_existing">Checking If user Exists</string>
    <string name="creating_contact">Adding this Contact...</string>
    <string name="title_select_mandi">Select Mandi</string>
    <string name="title_select_commodities">Select Commodities</string>
    <string name="fetching_buyers">Fetching All Your Buyers...</string>
    <string name="fetching_loaders">Fetching your loaders...</string>
    <string name="tab_text_my_buyers">My Buyers</string>
    <string name="tab_text_all_buyers">All Buyers</string>
    <string name="no_users_added">No %s added</string>
    <string name="txt_select_user">Select Your %s</string>
    <string name="order_amount_empty">Please enter the Amount</string>
    <string name="order_image_empty">Please add an image of your order</string>
    <string name="contact_created">Contact has been created</string>
    <string name="order_created">Order has been created</string>
    <string name="title_create_order">New Order</string>
    <string name="rate_the_following_order">Please Rate the following Order</string>
    <string name="no_orders_created">No Orders Created</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="total_amount">\u20B9 %d </string>
    <string name="adding_payment">Adding the Payment Details</string>
    <string name="payment_added">Payment has been Added</string>
    <string name="title_create_payment">Add Payment Details</string>
    <string name="txt_success">Sucess!!</string>
    <string name="submitting_loan_details">Submitting Loan Details</string>
    <string name="btn_text_edit_profile">Edit Profile</string>
    <string name="btn_text_edit_commodities">Edit Commodities</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="updating_commodities">Updating Commodities</string>
    <string name="text_edit_profile">Edit Profile Details</string>
    <string name="update_profile">Update Profile</string>
    <string name="text_save">Save</string>
    <string name="text_about_us">Niro is an agri commodity trading app with in-built payments and digital ledger. We help all the stakeholders involved in the agricultural industry to keep digital record of their agri transactions, make online payments and get value-added services like loans,insurance and more.\nWe make it very easy to connect with commission agents,traders, loaders,retailers and farmers to buy/sell agri-commodities</string>
    <string name="contact_us_on_whatsapp">Contact Us On Whatsapp</string>
    <string name="click_to_call_us">Click Here to Call Us</string>
    <string name="submitting_ratings">Submitting your ratings</string>
    <string name="creating_order">Creating this Order...</string>
    <string name="updating_profile">Updating this profile</string>
    <string name="logout_warning_message">Are you Sure you want to logout</string>
    <string name="txt_btn_logout">Logout</string>
    <string name="txt_btn_cancel">Cancel</string>
    <string name="no_payments_added">No Payments Added</string>
    <string name="fetching_payments">Getting All your Payment Details</string>
    <string name="online_paid">Paid Online</string>
    <string name="paid_by_cash">Paid by Cash</string>
    <string name="text_source_location">Source: \n%s</string>
    <string name="text_destination">"Destination: \n%s"</string>
    <string name="fetching_orders">Fetching your Orders</string>
    <string name="text_total_amount">Total Amount:</string>
    <string name="text_amount_paid">Amount Paid</string>
    <string name="text_image">Image</string>
    <string name="text_amount_pending">Amount Pending</string>
    <string name="text_amount_receive">Amount to Receive</string>
    <string name="title_order_details">Order Detail - %s</string>
    <string name="text_total_pending_amount">"Total Amount %s : \u20B9 %s"</string>
    <string name="title_total">%d %s</string>
    <string name="text_to_receive">to Receive</string>
    <string name="text_pending">Pending</string>
    <string name="edit_mandi">Edit Mandi</string>
    <string name="text_modal_price">\u20B9 %s \nPer Quintal</string>
    <string name="title_user_details">Details</string>
    <string name="sending_otp">Sending Otp</string>
    <string name="no_rates_available_for_this_location">No Rates Available for this Location Today</string>
    <string name="menu_daily_rates">Mandi Rates</string>
    <string name="details_updated">Details has been updated!</string>
    <string name="prefix_mandi_location">Mandi Location: %s, %s</string>
    <string name="prefix_commodity_variety">Variety: %s</string>
    <string name="prefix_commodity_price">Modal Price: \u20B9 %s</string>
    <string name="prefix_min_max_price">Min/Max Price: \u20B9%s/\u20B9%s</string>
    <string name="hint_search_daily_mandi">Search by Mandi, District or State</string>
    <string name="fetching_mandi_rates_for_today">Getting Latest Mandi Rates</string>
    <string name="hint_dispatch_date">Enter Dispatch Date</string>
</resources>