<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.niro.niroapp.fragments.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.niro.niroapp.fragments.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/orders_fragment" >
        <action
            android:id="@+id/action_navigation_orders_to_navigation_contacts_list"
            app:destination="@id/navigation_contacts_list" />
    </fragment>


    <fragment
        android:id="@+id/navigation_contacts_list"
        android:name="com.niro.niroapp.users.fragments.UsersListFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_users_list" >
        <action
            android:id="@+id/action_navigation_contacts_list_to_navigation_create_order"
            app:destination="@id/navigation_create_order"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit" />
        <action
            android:id="@+id/action_navigation_contacts_list_to_navigation_create_payment"
            app:destination="@id/navigation_create_payment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create_order"
        android:name="com.niro.niroapp.fragments.CreateOrderFragment"
        android:label="@string/title_create_order"
        tools:layout="@layout/create_order_fragment" />


    <fragment
        android:id="@+id/navigation_payments"
        android:name="com.niro.niroapp.fragments.PaymentsFragment"
        android:label="@string/title_payments"
        tools:layout="@layout/payments_fragment" >
        <action
            android:id="@+id/action_navigation_payments_to_navigation_contacts_list"
            app:destination="@id/navigation_contacts_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create_payment"
        android:name="com.niro.niroapp.fragments.CreatePaymentsFragment"
        android:label="@string/title_create_payment"
        tools:layout="@layout/create_payments_fragment" />

    <dialog android:id="@+id/dialog_select_users"
        android:name="com.niro.niroapp.users.fragments.AddUserDialogFragment" android:label=""
        tools:layout="@layout/dialog_select_contacts_or_manual_enter">

        <action
            android:id="@+id/action_dialog_select_users_to_navigation_create_users_manually"
            app:destination="@id/navigation_create_users_manually"
            app:enterAnim="@anim/fragment_close_enter"
            app:exitAnim="@anim/fragment_open_exit" />
        <action
            android:id="@+id/action_dialog_select_users_to_navigation_contacts"
            app:destination="@id/navigation_contacts"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_close_exit" />
    </dialog>

    <fragment
        android:id="@+id/navigation_loaders"
        android:name="com.niro.niroapp.users.fragments.UsersFragment"
        android:label="@string/title_users"
        tools:layout="@layout/users_fragment" >
        <action
            android:id="@+id/dialog_select_users_action"
            app:destination="@id/dialog_select_users"
            app:enterAnim="@anim/fragment_close_enter"
            app:exitAnim="@anim/fragment_close_exit" />

    </fragment>


    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.niro.niroapp.users.fragments.ContactsFragment"
        android:label="@string/title_select_from_contacts"
        tools:layout="@layout/contacts_fragment" >
        <action
            android:id="@+id/action_navigation_contacts_to_navigation_create_users_manually"
            app:destination="@id/navigation_create_users_manually" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create_users_manually"
        android:name="com.niro.niroapp.users.fragments.EnterUserFragment"
        android:label="@string/title_enter_details"
        tools:layout="@layout/enter_user_fragment" >

    </fragment>


    <fragment
        android:id="@+id/navigation_mandi_location"
        android:name="com.niro.niroapp.fragments.MandiListFragment"
        android:label="@string/title_select_mandi"
        tools:layout="@layout/mandi_list_fragment"  />

    <fragment
        android:id="@+id/navigation_commodities_fragment"
        android:name="com.niro.niroapp.fragments.CommoditiesFragment"
        android:label="@string/title_select_commodities"
        tools:layout="@layout/commodities_fragment" >
    </fragment>

    <fragment
        android:id="@+id/navigation_loans"
        android:name="com.niro.niroapp.loans.fragments.LoanRequirementFragment"
        android:label="@string/title_loans"
        tools:layout="@layout/loan_requirement_fragment" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.niro.niroapp.fragments.AboutUsFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_support"
        android:name="com.niro.niroapp.fragments.SupportFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_support" />

    <fragment
        android:id="@+id/navigation_profile_details"
        android:name="com.niro.niroapp.fragments.ProfileDetailsFragment"
        android:label="@string/menu_my_profile"
        tools:layout="@layout/profile_details_fragment" >
        <action
            android:id="@+id/action_navigation_profile_details_to_navigation_profile_edit"
            app:destination="@id/navigation_profile_edit" />
        <action
            android:id="@+id/action_navigation_profile_details_to_navigation_commodities_fragment"
            app:destination="@id/navigation_commodities_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile_edit"
        android:name="com.niro.niroapp.fragments.EditProfileFragment"
        android:label="@string/menu_edit_profile"
        tools:layout="@layout/edit_profile_fragment" />



</navigation>